--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <script type="module" src="http://localhost:3000/entrypoints/app.js" defer></script>
+    <title>Bobby, your safe home.</title>
+    <!-- <script type="module" src="http://localhost:3000/entrypoints/app.js" defer></script> -->
+    <script type="module" src="public/assets/app.js.f0f88e3e.js" defer></script>
+    <link rel="stylesheet" media="screen" href="public/assets/app.js.9de1f58b.css" />
 
 </head>
 <body>
@@ -76,8 +78,6 @@
                                 <p class="pre-title pre-title--blue">You can't refuse bobby at your home.</p>
                                 <h2>Take back control <br> with <span class="text-gradient-blue">Bobby Home</span>.</h2>
                                 <p>It is open source and gives you the full control over the software that protects your home from burglars.</p>
-                                <p>Make your contribution</p>
-                                <p>Comprehensive developer documentation.</p>
                             </div>
                         </div>
                         <img class="img-circle-shadow" src="./opensource.png" style="width: 50%" />
