--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Bobby, your safe home.</title>
-    <!-- <script type="module" src="http://localhost:3000/entrypoints/app.js" defer></script> -->
-    <script type="module" src="public/assets/app.js.f0f88e3e.js" defer></script>
-    <link rel="stylesheet" media="screen" href="public/assets/app.js.9de1f58b.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--<script type="module" src="http://localhost:3000/entrypoints/app.js" defer></script>-->
+    <script type="module" src="public/assets/app.js.0bd3d4ec.js" defer></script>
+    <link rel="stylesheet" media="screen" href="public/assets/app.js.6007385a.css" />
 
 </head>
 <body>
